fix overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2551,7 +2551,7 @@ summary {
 }
 
 #construction {
-  position: absolute;
+  position: fixed;
   right: -166px;
   padding-top: 3em;
   text-align: center;
